--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ content="100%">
   #hi{width:100% ;
     background-image:url("bg_1.gif");
          background-repeat:no-repeat;
-     height: 250px;}
+     height: 300px;}
   #comm{
     margin-left:10px;;
     width:300px;
@@ -87,9 +87,7 @@ border-radius:9px;
   .question:active{
     background:red;
     2s:duration;
-    }to{background:blue;
-      
-  2s:duration;}to{background:pink;}
+    }
        </style> 
 <body class="bg"> 
   <script>
@@ -102,7 +100,7 @@ var b=document.getElementById('comm');
   a.style.color="white";
  b.style.background="transparent";
   b.style.color="white";
-  c.style.background.image="bg_2.gif";
+  c.style.background.src="bg_2.gif";
   c.style.background.repeat="no-repeat";
   }
   function qst(){
