--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var b=document.getElementById('comm');
   </div><div id="hi" >
     <h1 style="color:#4EB7D0;font-size:30px;text-align:left;font-style:bold;height:100px;" id="title">Come take facebook codes free</h1>
     <h4 id="comm">Welcome visitor in fb_cods, here you will find cods of commetaries and others...</h4>
-    <button onclick="hello();" class="btnch">Change</button>
+    <button onclick="hello();" class="btnch">Show</button>
   </div>
 	<div class="codis">
 		
@@ -170,7 +170,7 @@ Código De Escrever Azul @@+[0:[0:2:]] Tira O Sinal +<hr/>
       <h4>Caso não saibas usar clique em detalhes para saber</h4>
   <center>
 	<details style="background:black;font-style:bold;" value="como usar?">
-        <h4>[1]-entra no facebook,<br>[2]-vai nos comentarios ou na area de comentar algo,<br>[3]-agora so tens cola o codigo e clicar em comentar ou enviar</h4>
+        <h4>[1]-entra no facebook,<br>[2]-vai nos comentarios ou na area de comentar algo,<br>[3]-agora so tens que cola o codigo e clicar em comentar ou enviar</h4>
       </details>
   </center>
     <h4>&copyblack2023</h4>
