--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ var b=document.getElementById('comm');
    <h1 style="color:yellow;font-weight:300px;text-indent:10px;font-size:27px;background:black;height:60px;">Uniblack
   <button onclick="qst()" class="question">?</button></h1>
   </div><div id="hi" >
-    <h1 style="color:#4EB7D0;font-size:32px;text-align:left;font-weight:50px;height:100px;" id="title">Codigos Dos Comentarios Do Facebook </h1>
+    <h1 style="color:#4EB7D0;font-size:31px;text-align:left;font-weight:50px;height:106px;" id="title">Codigos Dos Comentarios Do Facebook </h1>
     <h4 id="comm">Seja bem a UniBlack Aqui onde repitiras ou Veras pela primeira vez codigos do comentario do Facebook ,Fique avontade e aproveite os codigos.</h4>
     <button onclick="hello();" class="btnch">Ver</button>
   </div>
-<H4 style="color:Yellow;font-size:18px;font-style:Bold; background:black;"><center>Codigo Dos Comentarios,abaixo</center></H4>
+<H4 style="color:Yellow;height:60px;font-size:18px;font-style:Bold; background:black;"><center>Codigo Dos Comentarios,abaixo</center></H4>
 	<div class="codis">
 		
 		@+[200767586721995:] Código de Likes falsos.
