--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ content="100%">
          border-radius:10px;
        width:100px;
        height:30px;
-       margin-left:247px;
+       margin-left:245px;
     position:auto;
        font-style:bold;
     margin-top:30px;
@@ -114,11 +114,11 @@ var b=document.getElementById('comm');
   </script>
   
   <div style="display:flex;">
-   <h1 style="color:yellow;font-weight:300px;text-indent:10px;font-size:27px;background:black;height:60px;">Uniblack
+   <h1 style="color:yellow;font-variant:small-caps;font-weight:300px;text-indent:10px;font-size:27px;background:black;height:60px;">Uniblack
   <button onclick="qst()" class="question">?</button></h1>
   </div><div id="hi" >
-    <h1 style="color:#4EB7D0;font-size:31px;text-align:left;font-weight:50px;height:106px;" id="title">Codigos Dos Comentarios Do Facebook </h1>
-    <h4 id="comm">Seja bem a UniBlack Aqui onde repitiras ou Veras pela primeira vez codigos do comentario do Facebook ,Fique avontade e aproveite os codigos.</h4>
+    <h1 style="color:#4EB7D0;font-size:30px;text-align:left;font-weight:50px;height:106px;" id="title">Codigos Dos Comentarios Do Facebook </h1>
+    <h4 id="comm">Seja bem-vindo a UniBlack Aqui onde repitiras ou Veras pela primeira vez codigos do comentario do Facebook ,Fique avontade e aproveite os codigos.</h4>
     <button onclick="hello();" class="btnch">Ver</button>
   </div>
 <H4 style="color:Yellow;height:60px;font-size:18px;font-style:Bold; background:black;"><center>Codigo Dos Comentarios,abaixo</center></H4>
