--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ content="100%">
          border-radius:10px;
        width:100px;
        height:30px;
-       margin-left:90%;
+       margin-left:75%;
     position:auto;
        font-style:bold;
     margin-top:30px;
@@ -71,7 +71,7 @@ border-radius:9px;
              
          background-color:#171614;
             Animation-name:bgs;
-Animation-duration:3s;
+Animation-duration:2min;
 Animation-iteration-count:infinite;
 
             }
@@ -145,15 +145,6 @@ var b=document.getElementById('comm');
 Console.log("ola,eu");
       alert("Este site foi feito por Domingos JK,com objectivo principal de ajuda as pessoas e ganhar dinheiro como meu colega me disse,version 2.0");
       }
-Var bg=Document.getElementByClassName("bg");
- bg.addEventListener("pressed",function (){
-bg.display.marginLeft="160px";
-bg.display.marginTop="50px";
-bg.display.borderRadius="100px";
-bg.display.borderRadius="0px";
-bg.display.marginLeft="0px";
-bg.display.marginTop="0px";
-});
  </script>
   
   <div style="display:flex;">
