--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ var b=document.getElementById('comm');
   c.style.background.image.src="bg_2.gif";
   c.style.background.repeat="no-repeat";
   }
+
   function qst(){
-Console.log("ola,eu");
-      alert("Este site foi feito por Domingos JK,com objectivo principal de ajuda as pessoas e ganhar dinheiro como meu colega me disse,version 2.0");
+      alert("Este site foi feito por Domingos João kissimbila,com objectivo principal de ajuda as pessoas e ganhar dinheiro como meu colega me disse,version 2.0");
       }
  </script>
   
