--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@ Font-variant:small-caps;
        </style> 
 <body class="bg"> 
   <script>
-  
+ me=()=>{
+	 window.location.replace("https://www.facebook.com/profile.php?100085875529445");
+ } 
   function hello(){
 var a=document.getElementById('title');
 var b=document.getElementById('comm');
@@ -207,7 +209,9 @@ Código De Escrever Azul @@+[0:[0:2:]] Tira O Sinal +<hr/>
 <hr>@+[613172335365335:]
     </div>
   <div style="background:black;color:white">
-      <h4>Caso não saibas usar clique em detalhes para saber</h4>
+  <center> <button onclick="me()" style="width:160px;height:40px;background-image:linear-gradient(to left,black,gray);border:none;color:white;>ver o criador</button></center>
+ 
+	  <h4>Caso não saibas usar clique em detalhes para saber</h4>
   <center>
 	<details style="background:black;font-style:bold;" value="como usar?">
         <h4>[1]-entra no facebook,<br>[2]-vai nos comentarios ou na area de comentar algo,<br>[3]-agora so tens que cola o codigo e sem esquecer de tira(pagar) o sinal(+) e clicar em comentar ou enviar</h4>
