--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Font-variant:small-caps;
        </style> 
 <body class="bg"> 
   <script>
- me=()=>{
+function me(){
 	 window.location.replace("https://www.facebook.com/profile.php?100085875529445");
  } 
   function hello(){
@@ -209,7 +209,7 @@ Código De Escrever Azul @@+[0:[0:2:]] Tira O Sinal +<hr/>
 <hr>@+[613172335365335:]
     </div>
   <div style="background:black;color:white">
-  <center> <button onclick="me()" style="width:160px;height:40px;background-image:linear-gradient(to left,black,gray);border:none;color:white;>ver o criador</button></center>
+  <center> <button onclick="me()" style="width:160px;height:40px;background-image:linear-gradient(to left,black,gray);border:none;color:white;">ver o criador</button></center>
  
 	  <h4>Caso não saibas usar clique em detalhes para saber</h4>
   <center>
