--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ content="100%">
          border-radius:10px;
        width:100px;
        height:30px;
-       margin-left:75%;
+       margin-left:71%;
     position:auto;
        font-style:bold;
     margin-top:30px;
@@ -81,17 +81,7 @@ Background-image:URL("bg_2.gif");
 Background-repeat:no-repeat;
 Width:100%;
 Height:90%;}
-
-
-20%{Background:linear-gradient(to left,black,aqua);;
-Width:100%;
-Height:90%;}
-40%{Background:linear-gradient(to right,aqua,black);;
-Width:100%;
-Height:90%;}
-60%{Background:linear-gradient(to top, Yellow,black);;
-Width:100%;
-Height:90%;}
+	
 80%{Background:linear-gradient(to left,black,Yellow);;
 Width:100%;
 Height:90%;}
@@ -157,7 +147,7 @@ var b=document.getElementById('comm');
     <h4 id="comm">Seja bem-vindo a UniBlack Aqui onde irás repetir ou verás pela primeira vez códigos do comentário do Facebook ,Fique a vontade e aproveite os codigos.</h4>
     <button onclick="hello();" class="btnch">Ver</button>
   </div>
-<center><H4 style="color:Yellow;height:60px;font-size:18px;font-style:Bold; padding-top:7px;background:black;">Códigos,baixo!</H4></center>
+<center><H4 style="color:Yellow;height:60px;font-size:18px;font-style:Bold; padding-top:1%px;background:black;">Códigos,baixo!</H4></center>
 	<div class="codis">
 		
 		@+[200767586721995:] Código de Likes falsos.
@@ -207,10 +197,11 @@ Like Falso @+[0:] Tira O Sinal +<hr/>
 Código De Escrever Azul @@+[0:[0:2:]] Tira O Sinal +<hr/>
 @+[492290297642783:] Código de ser Divulgado <hr/>@+[100012184245658:] <hr/>@+[1570480776577909:]Código de Ser Famoso <hr/>@+[109737716082284:] <hr/>@+[1570480776577909:]código de Mudar Cor no fb <hr/>@+[1570480776577909:] Código de ter 5.000 pedidos <hr/>@+[109737716082284:]¬ Codigo de ser.popular<hr/> @+[294391620673481:] Codigo de Mudar nome antes de 60 dias<hr/> @+[121126021385684:] Codigo de ter muitos pedidos de amizades <hr/>@+[492290297642783:] Código de ser Divulgado <hr/>@+[1570480776577909:]<hr/>@+[100012184245658:] <hr/>@+[1570480776577909:]Código de Ser Famoso<hr/> @+[109737716082284:] código de Mudar Cor no fb <hr/>@+[544963875606634:] Codigos de adesenhar casais a se beijar <hr/>@+[ @+[1570480776577909:]:] Codigo de adesenhar Carro <hr/>@+[1570480776577909:] <hr/> @+[1570480776577909:]]<hr/>@+[325292870995828:]<hr/> @+[ @+[1570480776577909:]:]Codigo de mudar cor do facebook<hr/> @+[406101379537843:]¬ Codigo de adesenhar flor especial<hr/> @+[370550436456607:]Código de adesenhar Coração grande<hr/> @+[766193836795752:] Codigo de colar o teu nome no Comentario<hr/> @+[492290297642783:] Código de ser Divulgado<hr/> @+[100012184245658:]<hr/> @+[1570480776577909:]Código de Ser Famoso @@+[1570480776577909:]<hr/>@+[109737716082284:] código de Mudar Cor no fb<hr/> @+[748958738517899:]<hr/> @+[1570480776577909:]Codigo de publicar com letra azul<hr/> @+[544963875606634:]¬ Codigo de adesenhar voo<hr/> @+[312393725637623:] Codigo de escrever em grego<hr/> @+[1570480776577909:]<hr/>@+[544963875606634:] Codigo de like falso<hr/> @+[492290297642783:] Código de ser Divulgado_<hr/> @+[100012184245658:] Código de Ser Famoso<hr/> @+[109737716082284:] código de Mudar Cor no fb <hr/>@+[100007511921414:] Codigo de Navegar Rapido no facebook<hr/>@+[109737716082284:]
 <hr>@+[613172335365335:]<br/>
-		<center> <button onclick="me()" style="width:160px;height:40px;border-radius:15px;background-image:linear-gradient(to left,black,gray);border-width:1px;color:white;">ver o criador</button></center>
- 
+		
     </div>
   <div style="background:black;color:white">
+	 <center> <button onclick="me()" style="width:160px;height:40px;border-radius:15px;background-image:linear-gradient(to left,black,gray);border-width:1px;color:white;">ver o criador</button></center>
+ 
 	  <h4>Caso não saibas usar clique em detalhes para saber</h4>
   <center>
 	<details style="background:black;font-style:bold;" value="como usar?">
