--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ content="100%">
        h4{color:white;    }
   #hi{width:100% ;
     background:#171614;
-         background-repeat:no-repeat;
+         
      height: 300px;
 }
   #comm{
@@ -69,7 +69,7 @@ border-radius:9px;
               }
        body{
              
-         background-color:#171614;
+         background-color:linear-gradient(top,yellow,#171614);
             Animation-name:bgs;
 Animation-duration:60s;
 Animation-iteration-count:infinite;
@@ -78,7 +78,7 @@ Animation-iteration-count:infinite;
 @keyFrames bgs{
 0%{
 Background-image:URL("bg_2.gif");
-Background-repeat:no-repeat;
+
 Width:100%;
 Height:90%;}
 	
@@ -87,16 +87,12 @@ Width:100%;
 Height:90%;}
 100%{
 Background-image:URL("bg_1.gif");
-Background-repeat:no-repeat;
+
 Width:100%;
 Height:90%;}
 }
 
-//.bg-2{
-//Background-image:URL("bg_2.gif");
-//Background-repeat:no-repeat;
-//Width:100%;
-//Height:90%;}
+
             hr {color:white;
                // width="50px"
                 border-radius:50px;}
