--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@ Animation-iteration-count:infinite;
 
             }
 @keyFrames bgs{
-0%{
-Background-image:URL("bg_2.gif");
 
+
+	
+0%{Background:linear-gradient(to top, #1a1888,#171614);;
+Width:100%;
+Height:90%;}
+
+	50%{
+Background-image:URL("bg_2.gif");
 Width:100%;
 Height:90%;}
 	
-80%{Background:linear-gradient(to left,black,Yellow);;
-Width:100%;
-Height:90%;}
 100%{
 Background-image:URL("bg_1.gif");
 
@@ -196,7 +199,7 @@ Código De Escrever Azul @@+[0:[0:2:]] Tira O Sinal +<hr/>
 		
     </div>
   <div style="background:black;color:white">
-	 <center> <button onclick="me()" style="width:160px;height:40px;border-radius:15px;background-image:linear-gradient(to left,black,gray);border-width:1px;color:white;">ver o criador</button></center>
+	 <center> <button onclick="me()" style="width:160px;height:40px;border-radius:4px;background-image:linear-gradient(to left,black,gray);border-width:1px;color:white;">ver o criador</button></center>
  
 	  <h4>Caso não saibas usar clique em detalhes para saber</h4>
   <center>
